@@ -69,7 +69,7 @@ require_once dirname(__FILE__).'/include/page_header.php';
 			insert_js("update_period('".
 				$_REQUEST['period_id']."',".
 				zbx_jsvalue($_REQUEST['dstfrm']).",".
-				zbx_jsvalue($_REQUEST['caption']).",'".
+				zbx_jsvalue($caption).",'".
 				$_REQUEST['report_timesince']."','".
 				$_REQUEST['report_timetill']."','".
 				$_REQUEST['color']."');\n");
